--- a/pages/index.css
+++ b/pages/index.css
@@ -43,6 +43,7 @@
 @import url("../blocks/edit-button/edit-button.css");
 @import url("../blocks/add-button/add-button.css");
 @import url("../blocks/like-button/like-button.css");
+@import url("../blocks/like-button/like-button_liked.css");
 @import url("../blocks/save-button/save-button.css");
 @import url("../blocks/close-button/close-button.css");
 
