Михаил Бутырский, проектная работа 4, вторая версия

--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -1,5 +1,5 @@
 .close-button {
-    position: fixed;
+    position: absolute;
     left: 102%;
     top: -12%;
     background-image: url("../../images/close-button.svg");
