--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,10 +1,7 @@
 .popup__container{
-    position: fixed;
+    position: relative;
     height: 330px;
     width: 430px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     background: #FFFFFF;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
