--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -3,6 +3,10 @@
     line-height: 22px;
     color: #FFFFFF;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 500px;
 }
 
 @media screen and (max-width:767px){
@@ -11,5 +15,6 @@
         line-height: 17px;
         text-align: center;
         margin:14px 0 0 0;
+        max-width: 282px;
     }
 }
