--- a/blocks/copyright/copyright.css
+++ b/blocks/copyright/copyright.css
@@ -3,3 +3,11 @@
     line-height: 22px;
     color: #545454;
 }
+
+@media screen and (max-width:767px){
+    .copyright{
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
+
