--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,4 +1,4 @@
-.save-button{
+.popup__save-button{
     font-size: 18px;
     line-height: 22px;
     text-align: center;
@@ -9,19 +9,19 @@
     border:none;
     appearance: none;
     border-radius: 2px;
-    margin:48px 0 0 36px;
+    margin:48px 0 37px 36px;
 }
 
-.save-button:hover{
+.popup__save-button:hover{
     transition: ease-in;
     opacity: 0.8;
 }
 
 @media screen and (max-width:767px){
-    .save-button{
+    .popup__save-button{
         height: 46px;
         width: 238px;
-        margin:45px 0 0 22px;
+        margin:45px 0 25px 22px;
         font-size: 14px;
         line-height: 17px;
     }
