--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,6 +4,10 @@
     line-height: 48px;
     color: #FFFFFF;
     margin:0 18px 0 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 500px;
 }
 
 @media screen and (max-width:767px){
@@ -13,5 +17,6 @@
         text-align: center;
         margin:0 10px 0 0;
         padding-left: 24px;
+        max-width: 200px;
     }
 }
