Михаил Бутырский, проектная работа 4, четвертая версия

--- a/blocks/page/__profile/page__profile.css
+++ b/blocks/page/__profile/page__profile.css
@@ -1,3 +1,9 @@
 .page__profile{
-    margin-top: 38px;
+    margin-top: 37px;
+}
+
+@media screen and (max-width:767px){
+    .page__profile{
+        margin-top: 39px;
+    }
 }
