--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header{
     max-width: 880px;
-    border-bottom: 1px solid rgba(255,255,255,0.3);
+    border-bottom: 1px solid rgba(84,84,84, .7);
     margin:0 auto;
     padding:0 19px 41px;
 }
