--- a/blocks/page/__footer/page__footer.css
+++ b/blocks/page/__footer/page__footer.css
@@ -1,3 +1,11 @@
 .page__footer{
     margin-top: 67px;
+    margin-bottom: 60px;
+}
+
+@media screen and (max-width:767px){
+    .page__footer{
+        margin-top: 48px;
+        margin-bottom: 36px;
+    }
 }
