--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,3 +1,9 @@
 .page__header{
     margin-top: 45px;
 }
+
+@media screen and (max-width:767px){
+    .page__header{
+        margin-top: 28px;
+    }
+}
