--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 282px);
     grid-template-rows: repeat(2, 361px);
+    grid-auto-rows: 361px;
     column-gap: 17px;
     row-gap: 20px;
     margin: 0 auto;
