--- a/pages/index.css
+++ b/pages/index.css
@@ -38,6 +38,9 @@
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__inputs/popup__inputs.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
+@import url("../blocks/popup/__caption/popup__caption.css");
+@import url("../blocks/popup/__picture/popup__picture.css");
+@import url("../blocks/popup/__picture-container/popup__picture-container.css");
 
 /*  кнопки  */
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
@@ -45,6 +48,7 @@
 @import url("../blocks/element/__like-button/element__like-button.css");
 @import url("../blocks/element/__delete-button/element__delete-button.css");
 @import url("../blocks/element/__like-button/_liked/element__like-button_liked.css");
+@import url("../blocks/element/__open-picture-button/element__open-picture-button.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
 @import url("../blocks/popup/__create_button/popup__create-button.css");
