--- a/main.css
+++ b/main.css
@@ -6,16 +6,20 @@
 @media screen and (max-width:767px){.header__logo{height:25px;width:104px}}
 .profile{align-items:center;display:flex;justify-content:space-between;margin:0 auto;max-width:880px;padding:0 19px}@media screen and (max-width:767px){.profile{flex-direction:column;padding:0}}
 .profile__about{color:#fff;font-size:18px;line-height:22px;margin:0;max-width:420px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:767px){.profile__about{font-size:14px;line-height:17px;margin:14px 0 0;max-width:282px;text-align:center}}
-.profile__avatar{border-radius:50%;max-height:120px;max-width:120px}
+.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}.profile__avatar:hover{opacity:.6;transition:ease-in}
 .profile__info{align-items:center;display:flex;margin-top:16px;width:100%}@media screen and (max-width:767px){.profile__info{flex-direction:column}}
 .profile__inputs{display:flex;flex-direction:column;margin-left:25px}@media screen and (max-width:767px){.profile__inputs{margin:0}}
 .profile__name{color:#fff;font-size:42px;font-weight:500;line-height:48px;margin:0 18px 0 0;max-width:420px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:767px){.profile__name{font-size:27px;line-height:33px;margin:0 10px 0 0;max-width:200px;padding-left:24px;text-align:center}}
 .profile__name-with-button{align-items:center;display:flex}@media screen and (max-width:767px){.profile__name-with-button{margin-top:24px}}
+.profile__avatar-overlay{left:50%;position:absolute;top:50%;transform:translate(-50%,-50%);z-index:-1}
+.profile__avatar-container{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;border:none;max-width:120px;padding:0;position:relative;width:100%}
 .elements{-moz-column-gap:17px;column-gap:17px;display:grid;grid-auto-rows:361px;grid-template-columns:repeat(3,282px);grid-template-rows:repeat(2,361px);margin:0 auto;max-width:880px;padding:0 19px;row-gap:20px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content}@media screen and (max-width:1023px){.elements{grid-template-columns:repeat(2,282px);grid-template-rows:repeat(3,361px)}}@media screen and (max-width:767px){.elements{grid-template-columns:repeat(1,282px);grid-template-rows:repeat(6,361px)}}
 .element{background-color:#fff;border-radius:10px;max-width:282px;position:relative;width:100%}
 .element__caption{align-items:center;display:flex;justify-content:space-between;width:100%}
 .element__name{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:25px 0 31px 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .element__picture{border-radius:10px 10px 0 0;height:100%;max-height:282px;max-width:282px;-o-object-fit:cover;object-fit:cover;overflow:hidden;width:100%}
+.element__like-number{color:#000;font-size:13px;line-height:16px}
+.element__like-container{align-items:center;display:flex;flex-direction:column;margin:0 20px 0 0}
 .footer{margin:0 auto;max-width:880px;padding:0 19px}
 .copyright{color:#545454;font-size:18px;line-height:22px;margin:0}@media screen and (max-width:767px){.copyright{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;font-family:Inter,Helvetica,sans-serif;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility .3s,opacity .3s linear;visibility:hidden;width:100%;z-index:100}
@@ -31,8 +35,8 @@
 .popup__inputs-error_active{display:block}
 .profile__edit-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(8667ac4a523e8fc42e59.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;box-sizing:border-box;height:24px;width:24px}.profile__edit-button:hover{opacity:.6;transition:ease-in}@media screen and (max-width:767px){.profile__edit-button{height:18px;width:18px}}
 .profile__add-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(d86bb2edc2f6eadb96b7.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;box-sizing:border-box;height:50px;margin-left:18px;width:150px}.profile__add-button:hover{opacity:.6;transition:ease-in}@media screen and (max-width:767px){.profile__add-button{background-image:url(54b1426515811a15ebaf.svg);height:50px;margin-left:0;margin-top:36px;width:282px}}
-.element__like-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);border:0;flex-shrink:0;height:19px;margin:0 20px 0 0;width:22px}.element__like-button:hover{opacity:.5;transition:ease-in}
-.element__delete-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(cbc09a894bdd4c956365.svg);background-position:50%;background-repeat:no-repeat;border:none;box-sizing:border-box;height:19px;left:88%;position:absolute;top:5%;width:18px}.element__delete-button:hover{opacity:.6;transition:ease-in}
+.element__like-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);border:0;flex-shrink:0;height:19px;width:22px}.element__like-button:hover{opacity:.5;transition:ease-in}
+.element__delete-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(cbc09a894bdd4c956365.svg);background-position:50%;background-repeat:no-repeat;border:none;box-sizing:border-box;display:none;height:19px;left:88%;position:absolute;top:5%;width:18px}.element__delete-button:hover{opacity:.6;transition:ease-in}
 .element__like-button_liked{background-image:url(fe17a515669479b1e649.svg)}
 .element__open-picture-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;border-radius:10px 10px 0 0;border-style:none;cursor:pointer;height:100%;max-height:282px;max-width:282px;overflow:hidden;padding:0;width:100%}
 .popup__save-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:#000;border:none;border-radius:2px;color:#fff;font-size:18px;height:50px;line-height:22px;margin:48px 0 37px 36px;text-align:center;width:358px}.popup__save-button:hover{opacity:.8;transition:ease-in}@media screen and (max-width:767px){.popup__save-button{font-size:14px;height:46px;line-height:17px;margin:45px 0 25px 22px;width:238px}}
