--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,11 @@
 .profile__avatar{
-    max-width: 120px;
-    max-height: 120px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile__avatar:hover{
+    transition: ease-in;
+    opacity: 0.6;
 }
